--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,10 @@ body{
     background-color: #5A189A;
     margin: 0;
     padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, 1fr);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 25px;
 }
 
 #header {
@@ -38,7 +39,7 @@ body{
     grid-column: 2;
     grid-row: 2;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(auto-fill, 250px);
     gap: 10px;
     padding: 10px;
@@ -68,4 +69,11 @@ body{
 .book-card p {
     margin: 0;
     padding: 0;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
