--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
 
 body{
     background-color: #000;
-    color: #fff;
+    color: #edcdff;;
     margin: 0;
     padding: 0;
 }
@@ -15,34 +15,40 @@ body{
     padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     gap: 10px;
-    border-radius: 25px;
+    border-radius: 10px;
 }
 
 #header {
-    background-color: #3C096C;
+    background-image: url(images/headerbg.svg);
+    background-repeat: repeat-x;
     margin: 0;
     padding: 0;
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 1;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#book-form-container {
-    background-color: #240046;
+#nav-menu {
     margin: 0;
     padding: 0;
-    grid-column: 1;
-    grid-row: 2;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 3px #240046 solid;
 }
 
 #card-container {
-    grid-column: 2;
-    grid-row: 2;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(auto-fill, 250px);
-    gap: 10px;
-    padding: 10px;
+    gap: 20px;
+    padding: 20px;
 }
 
 #book-form{
@@ -50,6 +56,7 @@ body{
     padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     gap: 10px;
 }
 
@@ -61,9 +68,10 @@ body{
     margin: 0 auto;
     padding: 0;
     width: 80%;
-    display: grid;
-    grid-template: 1fr 6fr/ 1fr 4fr;
+    display: flex;
+    flex-direction: column;
     height: 100%;
+    background-color: #090018;
 }
 
 .book-card p {
@@ -76,4 +84,69 @@ body{
     justify-content: center;
     align-items: center;
     gap: 30px;
+}
+
+.remove-button, .read-button, #add-button, #book-add {
+    border: none;
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 1em;
+    margin: auto;
+    background-color: #C77DFF;
+    color: #10002b;
+    box-shadow: 3px 3px 3px #000;
+}
+
+.remove-button:hover, .read-button:hover, #add-button:hover, #book-add:hover, #close-button:hover {
+    cursor: pointer;
+}
+
+.remove-button:active, .read-button:active, #add-button:active, #book-add:active, #close-button:active {
+    box-shadow: 1px 1px 1px #000;
+    background-color: #9D4EDD;
+}
+
+#book-add{
+    box-shadow: 3px 3px 0px #5A189A;
+}
+
+#book-add:active {
+    box-shadow: 1px 1px 0px #5A189A;
+}
+
+#book-form-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 500px;
+    width: 600px;
+    background-color: rgba(36, 0, 70, 0.75);
+    border-radius: 10px;
+    border: 1px #9D4EDD solid;
+    backdrop-filter: blur(5px);
+}
+
+#close-button {
+    margin-top: 15px;
+    margin-left: 560px;
+    background: none;
+    border: none;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #e0aaff;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 4.5em;
+    color: #fff;
+    letter-spacing: .1em;
+    text-shadow: 4px 3px 0px #10002b;
+}
+
+image {
+    text-shadow: 4px 3px 0px #10002b;
 }
