--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,6 @@ h1 {
     text-shadow: 4px 3px 0px #10002b;
 }
 
-image {
-    text-shadow: 4px 3px 0px #10002b;
+img {
+    filter: drop-shadow(4px 3px 0px #10002b);
 }
