--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,36 @@
+@font-face {
+    font-family: 'poppinsbold';
+    src: url('fonts/poppins-bold-webfont.woff2') format('woff2'),
+         url('fonts/poppins-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'poppinsregular';
+    src: url('fonts/poppins-regular-webfont.woff2') format('woff2'),
+         url('fonts/poppins-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'chela_oneregular';
+    src: url('fonts/chelaone-regular-webfont.woff2') format('woff2'),
+         url('fonts/chelaone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html, body {
     height: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body{
@@ -7,6 +38,7 @@ body{
     color: #edcdff;;
     margin: 0;
     padding: 0;
+    font-family: 'poppinsregular', sans-serif;
 }
 
 .book-card {
@@ -25,10 +57,9 @@ body{
     background-repeat: repeat-x;
     margin: 0;
     padding: 0;
-    grid-column: 2/3;
-    grid-row: 1;
     height: 200px;
     display: flex;
+    gap: 40px;
     justify-content: center;
     align-items: center;
 }
@@ -94,7 +125,7 @@ body{
     font-weight: bold;
     font-size: 1em;
     margin: auto;
-    background-color: #C77DFF;
+    background-color: #9D4EDD;
     color: #10002b;
     box-shadow: 3px 3px 3px #000;
 }
@@ -103,9 +134,9 @@ body{
     cursor: pointer;
 }
 
-.remove-button:active, .read-button:active, #add-button:active, #book-add:active, #close-button:active {
+.remove-button:active, .read-button:active, #add-button:active, #book-add:active{
     box-shadow: 1px 1px 1px #000;
-    background-color: #9D4EDD;
+    background-color: #7B2CBF;
 }
 
 #book-add{
@@ -137,16 +168,108 @@ body{
     font-weight: bold;
     font-size: 1.2em;
     color: #e0aaff;
+    text-shadow: 3px 3px 1px #000;
+}
+
+#close-button:hover {
+    color: #7B2CBF;
+}
+
+#close-button:active {
+    color: #7B2CBF;
+    text-shadow: 1px 1px 1px #000;
 }
 
 h1 {
     font-weight: bold;
-    font-size: 4.5em;
+    font-size: 6em;
     color: #fff;
     letter-spacing: .1em;
     text-shadow: 4px 3px 0px #10002b;
+    font-family: 'chela_oneregular', sans-serif;
 }
 
 img {
     filter: drop-shadow(4px 3px 0px #10002b);
+}
+
+#title-field, #author-field, #pages{
+    width: 400px;
+    height: 30px;
+    margin: auto;
+}
+
+#read {
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+}
+
+label {
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+  
+  /* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+  
+  /* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+  
+.container input:checked ~ .checkmark {
+    background-color: #7B2CBF;
+}
+  
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+  
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+  
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
