--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     font-family: 'poppinsbold';
     src: url('fonts/poppins-bold-webfont.woff2') format('woff2'),
          url('fonts/poppins-bold-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 
 }
@@ -158,11 +158,15 @@ body{
     border-radius: 10px;
     border: 1px #9D4EDD solid;
     backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #close-button {
-    margin-top: 15px;
-    margin-left: 560px;
+    position: absolute;
+    top: 10px;
+    left: 565px;
     background: none;
     border: none;
     font-weight: bold;
@@ -279,4 +283,12 @@ label {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#form-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
+    margin-bottom: 0;
+    text-shadow: 2px 2px 1px #000;
 }
